deleting-k8s-pods/application/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: load-app
  labels:
    app: load-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: load-app
  template:
    metadata:
      labels:
        app: load-app
    spec:
      terminationGracePeriodSeconds: 10
      containers:
        - name: load-app
          image: harrymartland/node-load-app
          ports:
            - containerPort: 3000
          livenessProbe:
            initialDelaySeconds: 1
            periodSeconds: 5
            httpGet:
              path: /health
              port: 3000
