deleting-k8s-pods/application/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: load-app-service
spec:
  selector:
    app: load-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
