deleting-k8s-pods/application/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: load-app-ingress
spec:
  backend:
    serviceName: load-app-service
    servicePort: 80
